@@ -1,6 +1,0 @@
-#include "Evil.h"
-
-EAPI void tzset(void)
-{
-   /* does nothing... */
-}
